fix width issue on smaller screens

--- a/calendarStyle.css
+++ b/calendarStyle.css
@@ -84,10 +84,10 @@ body {font-family: Verdana,sans-serif;}
 }
 
 @media screen and (max-width: 420px) {
-    .weekdays li, .days li {width: 12.5%;}
+    .weekdays li, .days li {width: 13.1%;}
     .days li .active {padding: 2px;}
 }
 
 @media screen and (max-width: 290px) {
-    .weekdays li, .days li {width: 12.2%;}
+    .weekdays li, .days li {width: 13.1%;}
 }
